--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<h1>The Goodnight Circus</h1>
 			<img id="logo" src="photos/Logo.gif">
 			 
-			  <p>The <span>Goodnight Circus</span> blablablablablablablabla!</p>
+			  <p>The <span>Goodnight Circus</span> are awesome ! lalalalalala</p>
 		</div>
 		
 	</div>	
