--- a/index.html
+++ b/index.html
@@ -79,29 +79,29 @@
 	        <a data-lightbox="gallery" href="photos/GNC2.png"><img src="photos/GNC2.jpg"></a>
 	      </div>
 	      <div class="col-md-4 col-sm-6 col-xs-12">
-	        <a data-lightbox="gallery" href="photos/GNC3.jpeg"><img src="photos/GNC3.jpeg"></a>
+	        <a data-lightbox="gallery" href="photos/GNC3.jpeg"><img src="photos/GNC3.jpg"></a>
 	      </div>
 	    </div>
 	    <div class="row">
 	      <div class="col-md-4 col-sm-6 col-xs-12">
-	        <a data-lightbox="gallery" href="photos/image4.jpg"><img src="photos/image4.jpg"></a>
+	        <a data-lightbox="gallery" href="photos/image4.jpg"><img src="photos/GNC4.jpg"></a>
 	      </div>
 	      <div class="col-md-4 col-sm-6 col-xs-12">
-	        <a data-lightbox="gallery" href="photos/image5.jpg"><img src="photos/image5.jpg"></a>
+	        <a data-lightbox="gallery" href="photos/image5.jpg"><img src="photos/GNC5.jpg"></a>
 	      </div>
 	      <div class="col-md-4 col-sm-6 col-xs-12">
-	        <a data-lightbox="gallery" href="photos/image6.jpg"><img src="photos/image6.jpg"></a>
+	        <a data-lightbox="gallery" href="photos/image6.jpg"><img src="photos/GNC6.jpg"></a>
 	      </div>
 	    </div>
 	    <div class="row">
 	      <div class="col-md-4 col-sm-6 col-xs-12">
-	        <a data-lightbox="gallery" href="photos/image7.jpg"><img src="photos/image7.jpg"></a>
+	        <a data-lightbox="gallery" href="photos/image7.jpg"><img src="photos/GNC7.jpg"></a>
 	      </div>
 	      <div class="col-md-4 col-sm-6 col-xs-12">
-	        <a data-lightbox="gallery" href="photos/image8.jpg"><img src="photos/image8.jpg"></a>
+	        <a data-lightbox="gallery" href="photos/image8.jpg"><img src="photos/GNC8.jpg"></a>
 	      </div>
 	      <div class="col-md-4 col-sm-6 col-xs-12">
-	        <a data-lightbox="gallery" href="photos/image9.jpg"><img src="photos/image9low.jpg"></a>
+	        <a data-lightbox="gallery" href="photos/image9.jpg"><img src="photos/GNC9.jpg"></a>
 	      </div>
 	    </div>
 	   
