--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="col-md-4 col-sm-6 col-xs-12">
         <div class="videoBox">
           <div class="videoWrapper">
-              <iframe width="400" height="226" src="https://www.youtube.com/embed/BN17QKM19ko" frameborder="0" allowfullscreen></iframe>
+              <iframe width="400" height="226" src="https://www.youtube.com/embed/KxjjbvgXI2s" frameborder="0" allowfullscreen></iframe>
           </div>  
         </div> 
       </div> 
