--- a/index.html
+++ b/index.html
@@ -159,9 +159,8 @@
  	<div >
 		<img id="logo" src="photos/Logo.gif">
 		<p class="english">For information or booking please email or call:</p>
-		<p class="turkish">bilgi veya rezervasyon icin arayabilir ya da mail atabilirsiniz</p>
-		<h4><i class="fa fa-envelope-o" aria-hidden="true"></i>  uninvitedjazzband@gmail.com</h4>
-		<h4><i class="fa fa-phone" aria-hidden="true"></i>  0541 832 06 86</h4>
+		<h4><i class="fa fa-envelope-o" aria-hidden="true"></i>  Goodnightcircus@gmail.com</h4>
+		<h4><i class="fa fa-phone" aria-hidden="true"></i>  +49 176 3777 0078 </h4>
 	</div>
 		
 
@@ -182,8 +181,7 @@
       <div id="songStatus">
         <p> Currently playing: <span id="songTitle"></span></p>
       </div>
-    
-      <button id="language">Türkçe</button>
+  
     
 
       <a class="btn btn-default" href="https://www.facebook.com/theujb/" target="_blank">
