--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <div class="col-md-4 col-sm-6 col-xs-12">
         <div class="videoBox">
             <div class="videoWrapper">
-            	<iframe width="400" height="226" src="https://www.youtube.com/embed/hHeLqQOVrq4" frameborder="0" allowfullscreen></iframe>
+            	<iframe width="400" height="226" src="https://www.youtube.com/embed/KxjjbvgXI2s" frameborder="0" allowfullscreen></iframe>
             </div>  
         </div> 
 		<div class="videoBox">
