--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<h1>The Goodnight Circus</h1>
 			<img id="logo" src="photos/Logo.gif">
 			 
-			  <p>The <span>Goodnight Circus</span> are awesome ! lalalalalala</p>
+			  <p>The <span>Goodnight Circus</span> are awesome ! doobedoo lalalalalala</p>
 		</div>
 		
 	</div>	
@@ -184,14 +184,14 @@
   
     
 
-      <a class="btn btn-default" href="https://www.facebook.com/theujb/" target="_blank">
+      <a class="btn btn-default" href="https://www.facebook.com/goodnightcircus/" target="_blank">
       <i class="fa fa-facebook fa-lg"></i></a>
 
       <a class="btn btn-default" href="https://www.youtube.com/channel/UCDAlsFn3oBQrxDI4_pUWHTg" target="_blank">
       <i class="fa fa-youtube fa-lg"></i></a>
  <div>
 
-  <script  type="text/javascript" src="uninvited.js"></script>
+  <script  type="text/javascript" src="gnc.js"></script>
   <script  src="https://code.jquery.com/jquery-2.2.4.js"
   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
   crossorigin="anonymous"></script>
