--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<h1>The Goodnight Circus</h1>
 			<img id="logo" src="photos/Logo.gif">
 			 
-			  <p>The <span>Goodnight Circus</span> are awesome ! doobedoo lalalalalala</p>
+			  <p>The <span>Goodnight Circus</span> are awesome ! trash trash doo-laly</p>
 		</div>
 		
 	</div>	
@@ -141,7 +141,7 @@
       <div class="col-md-4 col-sm-6 col-xs-12">
         <div class="videoBox">
           <div class="videoWrapper">
-              <iframe width="400" height="226" src="https://www.youtube.com/embed/KxjjbvgXI2s" frameborder="0" allowfullscreen></iframe>
+              <iframe width="400" height="226" src="https://www.youtube.com/embed/BN17QKM19ko" frameborder="0" allowfullscreen></iframe>
           </div>  
         </div> 
       </div> 
