--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<h1>The Goodnight Circus</h1>
 			<img id="logo" src="photos/Logo.gif">
 			 
-			  <p>The <span>Goodnight Circus</span> are awesome ! trash trash doo-laly</p>
+			  <p>The <span>Goodnight Circus</span> are amazing !! is this thing on ?</p>
 		</div>
 		
 	</div>	
@@ -166,8 +166,7 @@
 
  </div>  
 
- <div id="credits">
- 	<p>Website built by your mother</p>
+
  </div>
     
   <div id="bottomBar"> 
