--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   
      <div class= "collapse navbar-collapse navHeaderCollapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
- 
+		
+ <li><a id="bio">Bio</a></li>
  <li><a id="photos">Photos</a></li>
  <li><a id="videos">Videos</a></li>
  <li><a id="contact">Contact</a></li>
@@ -161,6 +162,21 @@
 		<p class="english">For information or booking please email or call:</p>
 		<h4><i class="fa fa-envelope-o" aria-hidden="true"></i>  Goodnightcircus@gmail.com</h4>
 		<h4><i class="fa fa-phone" aria-hidden="true"></i>  +49 176 3777 0078 </h4>
+	</div>
+		
+
+ </div>  
+
+
+ </div>
+	
+	<div id="sectFive" class="section"> 
+
+ 	<div >
+		<img id="logo" src="photos/Logo.gif">
+		<p class="english">The Story So Far</p>
+		<h4><i class="fa fa-envelope-o" aria-hidden="true"></i>  bio text here blablabla</h4>
+		<h4><i class="fa fa-phone" aria-hidden="true"></i> bla bli bli </h4>
 	</div>
 		
 
