--- a/index.html
+++ b/index.html
@@ -175,8 +175,15 @@
  	<div >
 		<img id="logo" src="photos/Logo.gif">
 		<p class="english">The Story So Far</p>
-		<h4><i class="fa fa-envelope-o" aria-hidden="true"></i>  bio text here blablabla</h4>
-		<h4><i class="fa fa-phone" aria-hidden="true"></i> bla bli bli </h4>
+		<h4>  bio text here blablabla
+		blaaaaaaaaaaaaaaaaaaaaaaaa
+		blaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+		blaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+		blaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+		blaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+		blaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabla
+		blaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h4>
+		<h4>more bla bla bla bli bli </h4>
 	</div>
 		
 
