--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
  	<div >
 		<img id="logo" src="photos/Logo.gif">
-		<p class="english">The Story So Far</p>
+		<p class="english">The <span>Goodnight Circus</span> Story So Far...</p>
 		<h4>  bio text here blablabla
 		blaaaaaaaaaaaaaaaaaaaaaaaa
 		blaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
