--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
    <script  type="text/javascript" src="gnc.js"></script>
 
 </head>
+	
+<style>
+body {
+        background-image: url("photos/background.jpg ");
+} 
+ 
+</style>
+
 <body>
   <body>
 
