--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
 	<style>
 body {
-        background-image: url("photos/background.jpg ");
+        background-image: url("photos/background.jpg ") no-repeat center center;
 } 
  
 </style>
