--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 
  <link rel="stylesheet" href="./gnc.css">
    <script  type="text/javascript" src="gnc.js"></script>
-	
-	
+ <style>
+	 body{
+		 background-image: url("photos/background.jpg") no-repeat fixed 100%}
+	 <style>
 
-</head>
+
+<head>
 	
 
 
