--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
  <style>
 	 body{
 		 background-image: url("photos/background.jpg") no-repeat fixed 100%}
-	 <style>
+	 </style>
 
 
-<head>
+</head>
 	
 
 
