--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
    <script  type="text/javascript" src="gnc.js"></script>
  <style>
 	 body{
-		 background-image: url("photos/background.jpg") no-repeat fixed}
-	 <style>
+		 background-image: url("photos/background.jpg") no-repeat fixed;
+	 }
+ </style>
 
 
 </head>
