--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
- <link rel="stylesheet" href="./gnc.css">
+ <link rel="stylesheet" href="gnc.css">
    <script  type="text/javascript" src="gnc.js"></script>
 
 
