--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
 </nav>
  
 <div id="home" class="section"> 
+	<div class="textBox">
+ 
+ 		<div class="english">
+ 			<h1>The Goodnight Circus</h1>
+ 			<img id="logo" src="photos/Logo.gif">
+ 			 
+ 			  <p>The <span>Goodnight Circus</span> are amazing !! is this thing on ?</p>
+ 		</div>
+ 		
+ 	</div>	
 	
 
 	<div class="textContainer">
