--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
  
  		<div class="english">
  			<h1>The Goodnight Circus</h1>
- 			<img id="logo" src="photos/Logo.gif">
+ 			<img id="logo" src="photos/logopink.png">
  			 
  			  <p>The <span>Goodnight Circus</span> are amazing !! is this thing on ?</p>
  		</div>
