--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
  			<h1>The Goodnight Circus</h1>
  			<img id="logo" src="photos/logopink.png">
  			 
- 			  <p>The <span>Goodnight Circus</span> are amazing !! is this thing on ?</p>
+			<p>The <span>Goodnight Circus</span> Hot Jazz, Balkan, and Original Tunes</span> aus Berlin</p>
  		</div>
  		
  	</div>	
