--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 	<div class="textContainer">
 	</div>  	
-	<iframe id="logo" src="https://www.youtube.com/embed/BN17QKM19ko">
+	<iframe id="video" src="https://www.youtube.com/embed/BN17QKM19ko">
 </div>  
     
   
