--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	
 
 	<div class="textContainer">
-	<iframe width="auto" height="100%"
+	<iframe width="100%" height="auto"
 		src="https://www.youtube.com/embed/BN17QKM19ko">
 	</iframe>
 	</div>  		
