--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
 	
 
 	<div class="textContainer">
-	<iframe width="100%" height="auto" src="https://www.youtube.com/embed/B3-5SrCcP4o?controls=0" frameborder="0" allowfullscreen></iframe>
+	<iframe src="https://www.youtube.com/embed/B3-5SrCcP4o?controls=0" frameborder="0" allowfullscreen>
+		video {
+    width: 100%;
+    height: auto;
+}
+		</iframe>
 
 	</div> 
 </div>  
