--- a/index.html
+++ b/index.html
@@ -68,13 +68,69 @@
 	
 
 	<div class="textContainer">
-	<iframe src="https://www.youtube.com/embed/B3-5SrCcP4o?controls=0" frameborder="0" allowfullscreen>
-		video {
-    width: 100%;
-    height: auto;
-}
-		</iframe>
+<div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12">
+                <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+                <div class="flex-video widescreen"><iframe id="player" frameborder="0" allowfullscreen="1" title="YouTube video player" width="560" height="315" src="https://www.youtube.com/embed/CrcN0GMXv_o?modestbranding=1&amp;autoplay=0&amp;autohide=1&amp;showinfo=0&amp;version=3&amp;h1=en-US&amp;controls=1&amp;rel=0&amp;enablejsapi=1&amp;origin=http%3A%2F%2Fwww.budzillus.de&amp;widgetid=1"></iframe></div>
 
+                <script>
+                    
+                    // 2. This code loads the IFrame Player API code asynchronously.
+                    var tag = document.createElement('script');
+
+                    tag.src = "https://www.youtube.com/iframe_api";
+                    var firstScriptTag = document.getElementsByTagName('script')[0];
+                    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+                    // 3. This function creates an <iframe> (and YouTube player)
+                    //    after the API code downloads. h_511KOb4r4
+                    var player;
+                    function onYouTubeIframeAPIReady() {
+                        player = new YT.Player('player', {
+                            height: '315',
+                            width: '560',
+                            videoId: 'CrcN0GMXv_o',
+                            events: {
+                                'onReady': onPlayerReady,
+                                'onStateChange': onPlayerStateChange
+                            },
+                            playerVars: {
+                                'modestbranding': 1,
+                                'autoplay': 0,
+                                'autohide': 1,
+                                'showinfo': 0,
+                                'version': 3,
+                                'h1': 'en-US',
+                                'controls': 1,
+                                'rel' : 0
+                            }
+                        });
+                    }
+
+                    // 4. The API will call this function when the video player is ready.
+                    function onPlayerReady(event) {
+                        //event.target.playVideo();
+                    }
+
+                    // 5. The API calls this function when the player's state changes.
+                    //    The function indicates that when playing a video (state=1),
+                    //    the player should play for six seconds and then stop.
+                    var done = false;
+                    function onPlayerStateChange(event) {
+                        if (event.data == YT.PlayerState.PLAYING && !done) {
+                            setTimeout(stopVideo, 6000);
+                            done = true;
+                        }
+                    }
+                    function stopVideo() {
+                        player.stopVideo();
+                    }
+                </script>
+
+            </div>
+        </div>
+    </div>
 	</div> 
 </div>  
    
