--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
  
  		<div class="english">
  			<h1>The Goodnight Circus</h1>
- 			<img id="logo" src="photos/logopink.png">
+ 			<img id="logo" src="photos/goodnightcircussticker.jpg">
  			 
 			<p>The <span>Goodnight Circus</span> Hot Jazz, Balkan, and Original Tunes</span> aus Berlin</p>
  		</div>
