--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 	<div class="textContainer">
      </div> 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/B3-5SrCcP4o?controls=0" frameborder="0" allowfullscreen></iframe>
+<iframe width="cover" height="auto" src="https://www.youtube.com/embed/B3-5SrCcP4o?controls=0" frameborder="0" allowfullscreen></iframe>
 	
 </div>  
    
