--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
 
 	<div class="textContainer">
      </div> 
-<iframe width="cover" height="auto" src="https://www.youtube.com/embed/B3-5SrCcP4o?controls=0" frameborder="0" allowfullscreen></iframe>
+<div class="videoBox">
 	
+<iframe width="cover" height="auto" src="https://www.youtube.com/embed/B3-5SrCcP4o?controls=0" frameborder="0" allowfullscreen></iframe>
+	</div>
 </div>  
    
 
