--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
      </div> 
 <div class="videoBox">
 	
-<iframe width="cover" height="100%" src="https://www.youtube.com/embed/B3-5SrCcP4o?controls=0" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/B3-5SrCcP4o?controls=0" frameborder="0" allowfullscreen></iframe>
 	</div>
 </div>  
    
