--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<div class="textContainer">
 
      </div> 
-	<iframe id="videoBox" src="https://www.youtube.com/embed/B3-5SrCcP4o?controls=0" width="100%" height="auto" frameborder="0" allowfullscreen></iframe>
+	<iframe id="videoHome" src="https://www.youtube.com/embed/B3-5SrCcP4o?controls=0" width="100%" height="auto" frameborder="0" allowfullscreen></iframe>
 
 	
 	
