--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
      </div> 
 	<iframe id="videoHome" src="https://www.youtube.com/embed/B3-5SrCcP4o?controls=0" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
 
-	
+	        <div class="videoBox">
+          <div class="videoWrapper">
+          <iframe width="400" height="226" src="https://www.youtube.com/embed/B3-5SrCcP4o" frameborder="0" allowfullscreen></iframe>
+</div> 
 	
 </div>  
    
