--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 	        <div class="videoBox">
           <div class="videoWrapper">
-          <iframe width="400" height="226" src="https://www.youtube.com/embed/B3-5SrCcP4o" frameborder="0" allowfullscreen></iframe>
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/B3-5SrCcP4o" frameborder="0" allowfullscreen></iframe>
 </div> 
 	
 </div>  
