--- a/index.html
+++ b/index.html
@@ -70,11 +70,9 @@
 	<div class="textContainer">
 
      </div> 
-	<iframe id="videoHome" src="https://www.youtube.com/embed/B3-5SrCcP4o?controls=0" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
-
 	        <div class="videoBox">
           <div class="videoWrapper">
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/B3-5SrCcP4o" frameborder="0" allowfullscreen></iframe>
+          <iframe id="videoHome" src="https://www.youtube.com/embed/B3-5SrCcP4o" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
 </div> 
 	
 </div>  
