--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
      </div> 
 	        <div class="videoBox">
           <div class="videoWrapper">
-          <iframe src="https://www.youtube.com/embed/B3-5SrCcP4o" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/B3-5SrCcP4o" width="100%" height="auto" frameborder="0" allowfullscreen></iframe>
 </div> 
 	
 </div>  
